--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "^9.1.0",
+    "flowbite-typography": "^1.0.3",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
